# nokkonen-shelf

./: README.md  docker-compose.yml
NokkonenShelfApi/: .env.example  Cargo.toml
NokkonenShelfApi/migrations/: 0001_initial.sql  0002_auth.sql  0003_drop_tower_sessions.sql
NokkonenShelfApi/src/: bookcases.rs  books.rs  error.rs  lib.rs  main.rs  shelves.rs
NokkonenShelfApi/src/auth/: github.rs  google.rs  mod.rs
NokkonenShelfApi/tests/: api_bookcases.rs
NokkonenShelfApi/tests/common/: mod.rs
NokkonenShelfApp/: index.html  package-lock.json  package.json  vite.config.js
NokkonenShelfApp/src/: App.css  App.jsx  index.css  themes.js
NokkonenShelfApp/src/components/: AddBookModal.jsx  Book.jsx  BookDetails.jsx  Bookshelf.jsx  ConfirmModal.jsx  LandingPage.jsx  Shelf.jsx  ShelfArea.jsx
NokkonenShelfApp/src/store/: authSlice.js  booksSlice.js  index.js
